# DeptTelegramBot

./: Dockerfile  MakeFile  README.md  config.py  docker-compose.yml  enums.py  handlers.py  main.py  operation_parser.py  pyproject.toml  storage.py
handlers/: inline.py  keyboard.py  reply.py
