[project]
name = "depttelegrambot"
version = "0.1.0"
description = ""
authors = [
    {name = "Grigoryi K",email = "NicknameSoHard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
