[project]
name = "depttelegrambot"
version = "0.1.0"
description = ""
authors = [
    {name = "Grigoryi K",email = "NicknameSoHard@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram (>=3.20.0.post0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
autoflake = "^2.3.1"
unify = "^0.5"
flake8 = "^7.2.0"
pylint = "^3.3.7"
mypy = "^1.15.0"
click = "^8.2.0"

